shifting to anki for ll

--- a/00_notes/lectures/linked_list.tex
+++ b/00_notes/lectures/linked_list.tex
@@ -125,22 +125,22 @@ class CircularLinkedList:
             \toprule
             \textbf{Problem} & \textbf{Description:} \\
             \midrule
-                206. Reverse Linked List & Given the head of a singly linked list, reverse the list and return the reversed list. \\
-                \multicolumn{2}{p{\linewidth}}{
-                    \begin{itemize}
-                        \item \textbf{Iterative:} 
-                        \begin{itemize}
-                            \item Init: $\underbrace{\text{None}}_{\text{prev}} \rightarrow \underbrace{1}_{\text{cur}} \rightarrow 2 \rightarrow 3 \rightarrow 4 \rightarrow 5$
-                            \item While loop: 
-                            \begin{itemize}
-                                \item Temp: $\underbrace{\text{None}}_{\text{prev}} \rightarrow \underbrace{1}_{\text{cur}} \rightarrow \underbrace{2}_{\text{temp}} \rightarrow 3 \rightarrow 4 \rightarrow 5$
-                                \item Switch link: $\underbrace{\text{None}}_{\text{prev}} \leftarrow \underbrace{1}_{\text{cur}} \rightarrow \underbrace{2}_{\text{temp}} \rightarrow 3 \rightarrow 4 \rightarrow 5$
-                                \item Swap positions: $\underbrace{1}_{\text{prev = cur}} \rightarrow \underbrace{2}_{\text{cur = temp}} \rightarrow 3 \rightarrow 4 \rightarrow 5$
-                            \end{itemize}
-                        \end{itemize}                        
-                    \end{itemize}
-                } \\
-                \midrule
+                % 206. Reverse Linked List & Given the head of a singly linked list, reverse the list and return the reversed list. \\
+                % \multicolumn{2}{p{\linewidth}}{
+                %     \begin{itemize}
+                %         \item \textbf{Iterative:} 
+                %         \begin{itemize}
+                %             \item Init: $\underbrace{\text{None}}_{\text{prev}} \rightarrow \underbrace{1}_{\text{cur}} \rightarrow 2 \rightarrow 3 \rightarrow 4 \rightarrow 5$
+                %             \item While loop: 
+                %             \begin{itemize}
+                %                 \item Temp: $\underbrace{\text{None}}_{\text{prev}} \rightarrow \underbrace{1}_{\text{cur}} \rightarrow \underbrace{2}_{\text{temp}} \rightarrow 3 \rightarrow 4 \rightarrow 5$
+                %                 \item Switch link: $\underbrace{\text{None}}_{\text{prev}} \leftarrow \underbrace{1}_{\text{cur}} \rightarrow \underbrace{2}_{\text{temp}} \rightarrow 3 \rightarrow 4 \rightarrow 5$
+                %                 \item Swap positions: $\underbrace{1}_{\text{prev = cur}} \rightarrow \underbrace{2}_{\text{cur = temp}} \rightarrow 3 \rightarrow 4 \rightarrow 5$
+                %             \end{itemize}
+                %         \end{itemize}                        
+                %     \end{itemize}
+                % } \\
+                % \midrule
                 21. Merge Two Sorted Lists & Given two sorted linked lists, merge them into one sorted list. \\
                 \multicolumn{2}{p{\linewidth}}{
                     \begin{itemize}
