--- a/00_lc_notes/lectures/2_two_pointers.tex
+++ b/00_lc_notes/lectures/2_two_pointers.tex
@@ -28,22 +28,22 @@
                 \end{itemize}
             } \\
             \midrule
-            125. Valid Palindrome & Given a string, determine if it is a palindrome, \\
-            & considering only alphanumeric characters and ignoring cases. \\
-            \multicolumn{2}{p{\linewidth}}{
-                \begin{itemize}
-                    \item \texttt{s\_new = ''.join(char.lower() for char in s if char.isalnum())} to remove non-alphanumeric and lowercase. 
-                    \item Use front and back pointers. If they not equal, return False. If equal move both pointers.
-                \end{itemize}
-            } \\
-            \midrule
-            167. Two Sum II - Input array is sorted & Given an array of integers that is already sorted in ascending order, \\
-            & find two numbers such that they add up to a target. \\
-            \multicolumn{2}{p{\linewidth}}{
-                \begin{itemize}
-                    \item Use front and back pointers. If > target, move back pointer left. If < target, move front pointer right.
-                \end{itemize}
-            } \\
+            % 125. Valid Palindrome & Given a string, determine if it is a palindrome, \\
+            % & considering only alphanumeric characters and ignoring cases. \\
+            % \multicolumn{2}{p{\linewidth}}{
+            %     \begin{itemize}
+            %         \item \texttt{s\_new = ''.join(char.lower() for char in s if char.isalnum())} to remove non-alphanumeric and lowercase. 
+            %         \item Use front and back pointers. If they not equal, return False. If equal move both pointers.
+            %     \end{itemize}
+            % } \\
+            % \midrule
+            % 167. Two Sum II - Input array is sorted & Given an array of integers that is already sorted in ascending order, \\
+            % & find two numbers such that they add up to a target. \\
+            % \multicolumn{2}{p{\linewidth}}{
+            %     \begin{itemize}
+            %         \item Use front and back pointers. If > target, move back pointer left. If < target, move front pointer right.
+            %     \end{itemize}
+            % } \\
             \bottomrule
         \end{tabular}
     \end{center}
