--- a/00_lc_notes/lectures/4_binary_search.tex
+++ b/00_lc_notes/lectures/4_binary_search.tex
@@ -34,23 +34,23 @@ def binary_search(nums, target):
             \toprule
             \textbf{Problems} & \textbf{Description} \\
             \midrule
-            704. Binary Search & Given a sorted array of integers, return the index of the target. \\
-            & If not found, return -1. \\
-            \multicolumn{2}{p{\linewidth}}{
-                \begin{itemize}
-                    \item Implement binary search.
-                \end{itemize}
-            } \\
-            \midrule
-            74. Search a 2D Matrix & Given a 2D matrix, search for a target value. \\
-            & If found, return its index. \\
-            \multicolumn{2}{p{\linewidth}}{
-                \begin{itemize}
-                    \item Use binary search to find the row by comparing first value of mid row < target (decrement bottom) \& last value of mid row < target (increment top).
-                    \item Row is top + bottom // 2.
-                    \item Then, use binary search to find the column in that row.
-                \end{itemize}
-            } \\
+            % 704. Binary Search & Given a sorted array of integers, return the index of the target. \\
+            % & If not found, return -1. \\
+            % \multicolumn{2}{p{\linewidth}}{
+            %     \begin{itemize}
+            %         \item Implement binary search.
+            %     \end{itemize}
+            % } \\
+            % \midrule
+            % 74. Search a 2D Matrix & Given a 2D matrix, search for a target value. \\
+            % & If found, return its index. \\
+            % \multicolumn{2}{p{\linewidth}}{
+            %     \begin{itemize}
+            %         \item Use binary search to find the row by comparing first value of mid row < target (decrement bottom) \& last value of mid row < target (increment top).
+            %         \item Row is top + bottom // 2.
+            %         \item Then, use binary search to find the column in that row.
+            %     \end{itemize}
+            % } \\
             \midrule
             875. Koko Eating Bananas & Given an array of piles and an integer h, \\
             & find the minimum eating speed k such that Koko can eat \\
